# SastPython

./: README.md  pyproject.toml
sastpython/: cli.py  core.py  reporter.py  rules1.py  rules2.py  rules3.py  rules5.py  rules6.py  rules8.py
